puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Organizations.Manager/content/Controllers/Organization/OrganizationController.cs.pp
namespace $rootnamespace$.Controllers.Organization
{
    using System.Web.Mvc;

    public class OrganizationController : Controller
    {
        public ActionResult Index()
        {
            return this.View();
        }
    }
}
